extended recording info code to include book number and page number matches

--- a/recording_info.ipynb
+++ b/recording_info.ipynb
@@ -38,7 +38,33 @@
         "\n",
         "  word_separator = rf\"(?:{comma_separator}|{and_separator}|\\s+)\"\n",
         "\n",
-        "  return re.search(date_time_pattern, text, re.IGNORECASE)"
+        "  return re.search(date_time_pattern, text, re.IGNORECASE)\n",
+        "\n",
+        "\n",
+        "def extract_document_info(document_text):\n",
+        "\n",
+        "\n",
+        "  book = r\"(?i:book|bk|bk\\.|b|volume|vol|v)\"\n",
+        "  page = r\"(?i:page|pg|pg\\.|p)\"\n",
+        "  numeric_pattern = r\"\\d+(?:\\s*-\\s*\\d+)?\"\n",
+        "\n",
+        "  suffix = r\"(?:\\s*|no|no\\.|number|num|\\s*)?\"\n",
+        "\n",
+        "  key_value_separator = r\"(?:-|:|:-|\\s+)\"\n",
+        "  key_value_pattern = rf\"(\\s*{key_value_separator}\\s*)\"\n",
+        "\n",
+        "  comma_separator = r\"\\s*,\\s*\"\n",
+        "  and_separator = r\"\\s*and\\s*\"\n",
+        "\n",
+        "  word_separator = rf\"(?:{comma_separator}|{and_separator}|\\s+)\"\n",
+        "\n",
+        "  book_pattern = rf\"{book}{suffix}{key_value_pattern}{numeric_pattern}\"\n",
+        "  page_pattern = rf\"{page}{suffix}{key_value_pattern}{numeric_pattern}\"\n",
+        "\n",
+        "  full_pattern = rf\"{book_pattern}{word_separator}{page_pattern}\"\n",
+        "  book_page_matches = re.finditer(full_pattern, document_text, re.IGNORECASE)\n",
+        "\n",
+        "  return book_page_matches"
       ]
     }
   ]
