integrated all stages of dataset construction pipeline.

--- a/construct_dataset.ipynb
+++ b/construct_dataset.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8WLip1gH1tej"
       },
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "YI1TTeWk1-2M"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +185,108 @@
       "metadata": {
         "id": "m3bXOpFs2Fkl"
       },
-      "execution_count": 3,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import csv\n",
+        "\n",
+        "\n",
+        "def map_labels_to_ids(labels, corrected_mapping):\n",
+        "\n",
+        "  return list(map(lambda x : corrected_mapping[x.replace(\"\\t\", \"\")], labels))\n",
+        "\n",
+        "\n",
+        "def get_entity_mapping(file_path):\n",
+        "\n",
+        "  with open(file_path, 'r') as csvfile:\n",
+        "      reader = csv.reader(csvfile)\n",
+        "      keys = next(reader)\n",
+        "      values = next(reader)\n",
+        "      entity_mapping = dict(zip(keys, values))\n",
+        "\n",
+        "  corrected_mapping = {key: int(value) for key, value in entity_mapping.items()}\n",
+        "\n",
+        "  print(corrected_mapping)\n",
+        "  return corrected_mapping\n",
+        "\n",
+        "\n",
+        "\n",
+        "def organize_data(data):\n",
+        "\n",
+        "  input_ids = [entry[0] for entry in data]\n",
+        "  labels = [entry[1] for entry in data]\n",
+        "  attention_mask = [entry[2] for entry in data]\n",
+        "  is_last_chunk = [entry[3] for entry in data]\n",
+        "\n",
+        "  df = pd.DataFrame({\n",
+        "      \"input_ids\": input_ids,\n",
+        "      \"labels\": labels,\n",
+        "      \"attention_mask\" : attention_mask,\n",
+        "      \"is_last_chunk\" : is_last_chunk\n",
+        "  })\n",
+        "\n",
+        "\n",
+        "  file_path = '/content/drive/My Drive/entity_mapping.csv'\n",
+        "  corrected_mapping = get_entity_mapping(file_path)\n",
+        "\n",
+        "\n",
+        "  df[\"labels\"] = df[\"labels\"].apply(lambda x: map_labels_to_ids(x, corrected_mapping))\n",
+        "  df[\"input_ids\"] = df[\"input_ids\"].apply(lambda x: x + ([0]*(512-len(x))))\n",
+        "  df[\"labels\"] = df[\"labels\"].apply(lambda x: x + ([corrected_mapping['O']]*(512-len(x))))\n",
+        "  df_copy = df.copy()\n",
+        "\n",
+        "  dataset = CustomDataset(df)\n",
+        "  return dataset, df_copy, corrected_mapping\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "A6F4rMqbUxiP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "def data_preparation_pipeline(file_path, file_path_2):\n",
+        "\n",
+        "  # classes, annotations = load_test_data_from_json(file_path, file_path_2)\n",
+        "  classes, annotations = read_data_from_json(file_path)\n",
+        "\n",
+        "  print(len(annotations))\n",
+        "  correct_annotations = adjust_entity_boundaries(patterns, annotations)\n",
+        "  cleaned_data = clean_data(correct_annotations)\n",
+        "  aligned_data = align_data(cleaned_data)\n",
+        "  annotated_bert, tokenizer = label_data(aligned_data)\n",
+        "  data = prepare_dataset(annotated_bert)\n",
+        "  dataset, df, corrected_mapping = organize_data(data)\n",
+        "\n",
+        "\n",
+        "  return dataset, df, corrected_mapping\n",
+        "\n",
+        "\n",
+        "json_file_path = '/content/drive/My Drive/20k_batch1 1.json'\n",
+        "test_data_file_path = '/content/drive/My Drive/WD_(4129)/'\n",
+        "test_data_file_path_2 = '/content/drive/My Drive/Completed annotations - 2.27.2023/'\n",
+        "test_data_file_path_3 = '/content/drive/My Drive/7744_ner_v2_final.json'\n",
+        "dataset, df, corrected_mapping = data_preparation_pipeline(test_data_file_path_3, test_data_file_path_2)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "pUTNqoq4U2Ab"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
