simplified code to classify documents. will require further testing

--- a/recording_info.ipynb
+++ b/recording_info.ipynb
@@ -44,6 +44,89 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "def match_keywords(context):\n",
+        "    context_str = ' '.join(context).lower()\n",
+        "\n",
+        "    if \"vendor's\" in context_str and \"lien\" in context_str:\n",
+        "        return \"Vendor's Lien\"\n",
+        "    elif \"special\" in context_str and \"warranty\" in context_str:\n",
+        "        return \"Special Warranty\"\n",
+        "    elif \"statutory\" in context_str:\n",
+        "        return \"Statutory\"\n",
+        "    elif \"warranty\" in context_str:\n",
+        "        return \"General Warranty\"\n",
+        "    else:\n",
+        "        return None\n",
+        "\n",
+        "def classify_deed_type(text):\n",
+        "    original_text = text\n",
+        "    text_lower = text.lower()\n",
+        "\n",
+        "    block_boundary_pattern = r\"(?s)(?:.*?<laysep@@##\\$\\$>|.+)\"\n",
+        "    blocks = list(re.finditer(block_boundary_pattern, text_lower, re.DOTALL))\n",
+        "\n",
+        "    text_ptr = 0\n",
+        "    heading = None\n",
+        "\n",
+        "    while heading is None:\n",
+        "\n",
+        "\n",
+        "        if text_ptr >= len(text_lower):\n",
+        "            return None\n",
+        "\n",
+        "        query_text = text_lower[text_ptr:]\n",
+        "\n",
+        "        deed_match = re.search(r\"\\bdeed\\b\", query_text, re.IGNORECASE)\n",
+        "        if not deed_match:\n",
+        "            return None\n",
+        "\n",
+        "        deed_start = text_ptr + deed_match.start()\n",
+        "        deed_end = text_ptr + deed_match.end()\n",
+        "\n",
+        "\n",
+        "        heading_block = None\n",
+        "        for b in blocks:\n",
+        "            if b.start() <= deed_start and b.end() >= deed_end:\n",
+        "\n",
+        "                if text_ptr < b.start():\n",
+        "                  heading_block = b.group()\n",
+        "                else:\n",
+        "                  heading_block = text[text_ptr:b.end()]\n",
+        "\n",
+        "\n",
+        "                break\n",
+        "\n",
+        "        if heading_block is None:\n",
+        "            return None\n",
+        "\n",
+        "\n",
+        "        heading_block = heading_block.lower()\n",
+        "        words = re.findall(r\"\\b[\\w']+\\b\", heading_block)\n",
+        "        try:\n",
+        "            idx = words.index('deed')\n",
+        "        except ValueError:\n",
+        "            return None\n",
+        "\n",
+        "        context = words[max(0, idx - 5): idx + 6]\n",
+        "        heading = match_keywords(context)\n",
+        "\n",
+        "        text_ptr = deed_end + 1\n",
+        "\n",
+        "    return heading\n",
+        "\n",
+        "\n",
+        "counter = 0\n"
+      ],
+      "metadata": {
+        "id": "Oip15MVMw4XP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def find_wordy_blocks(text):\n",
         "    # Split using your custom separator or 3+ newlines\n",
         "    separator_pattern = r\"(?:laysep@@##\\$\\$>|(?:\\n\\s*){2,})\"\n",
