added code to capture and identify document date, effective date and signature date

--- a/recording_info.ipynb
+++ b/recording_info.ipynb
@@ -204,6 +204,112 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "import dateparser\n",
+        "\n",
+        "def match_keywords_in_neighbourhood(neighbourhood, date, group):\n",
+        "\n",
+        "  signature_keywords = [\"sworn\", \"sign\", \"acknowledge\", \"execute\", \"certify\", \"witness\", \"signed\", \"acknowledged\", \"executed\", \"certified\", \"witnessed\"]\n",
+        "  effective_keywords = [\"effective\"]\n",
+        "  document_keywords = signature_keywords + effective_keywords\n",
+        "\n",
+        "  keywords_of_interest = None\n",
+        "  dates = []\n",
+        "\n",
+        "  if group == \"document\":\n",
+        "    keywords_of_interest = document_keywords\n",
+        "    if not any(kw.lower() in neighbourhood.lower() for kw in keywords_of_interest):\n",
+        "      return date\n",
+        "\n",
+        "  else:\n",
+        "    if group == \"effective\":\n",
+        "      keywords_of_interest = effective_keywords\n",
+        "    elif group == \"signature\":\n",
+        "      keywords_of_interest = signature_keywords\n",
+        "\n",
+        "    if any(kw.lower() in neighbourhood.lower() for kw in keywords_of_interest):\n",
+        "      return date\n",
+        "\n",
+        "def not_recording_date(d, matches):\n",
+        "    return not any(rdm.start() <= d.start() and rdm.end() >= d.end() for rdm in matches)\n",
+        "\n",
+        "def find_doc_date(filename, date_pattern, text, recording_date_matches=None):\n",
+        "\n",
+        "\n",
+        "  parsed_recording_dates = []\n",
+        "  if recording_date_matches:\n",
+        "\n",
+        "    recording_date_matches = list(recording_date_matches)\n",
+        "    for rdm in recording_date_matches:\n",
+        "\n",
+        "      rd = re.search(date_pattern, rdm.group(), re.IGNORECASE)\n",
+        "      recording_date_parsed = dateparser.parse(rd.group())\n",
+        "      if recording_date_parsed:\n",
+        "        parsed_recording_dates.append(recording_date_parsed.date())\n",
+        "\n",
+        "    parsed_recording_date = sorted(set(parsed_recording_dates))[0] if parsed_recording_dates else None\n",
+        "    signature_keywords = [\"sworn\", \"sign\", \"acknowledge\", \"execute\", \"certify\", \"witness\", \"signed\", \"acknowledged\", \"executed\", \"certified\", \"witnessed\"]\n",
+        "    effective_keywords = [\"effective\"]\n",
+        "\n",
+        "    date_matches = list(re.finditer(date_pattern, text, re.IGNORECASE))\n",
+        "    parsed_dates = []\n",
+        "\n",
+        "    window = 100\n",
+        "\n",
+        "\n",
+        "    for dm in date_matches:\n",
+        "      raw = dm.group()\n",
+        "      raw = raw.replace(\"day\", \"\").replace(\"of\", \"\")\n",
+        "      raw = \" \".join(raw.split())\n",
+        "\n",
+        "      parsed = dateparser.parse(raw)\n",
+        "      if parsed:\n",
+        "        doc_date = parsed.date()\n",
+        "\n",
+        "        if parsed_recording_date and doc_date <= parsed_recording_date and (parsed_recording_date - doc_date).days <= 150:\n",
+        "          start, end = dm.start(), dm.end()\n",
+        "          neighbourhood = text[max(0, start - window): end].lower()\n",
+        "          # for sk in signature_keywords:\n",
+        "          #   idx = neighbourhood.find(sk)\n",
+        "          #   if idx != -1:\n",
+        "          #     relative_end = end - max(0, start - window)\n",
+        "          #     snippet = neighbourhood[idx:relative_end]\n",
+        "          #     parsed_dates.append((doc_date, snippet))\n",
+        "          all_keywords = effective_keywords + signature_keywords\n",
+        "          if not any(k in neighbourhood.lower() for k in all_keywords):\n",
+        "\n",
+        "            if not_recording_date(dm, recording_date_matches):\n",
+        "              parsed_dates.append((doc_date, \"tutu\"))\n",
+        "\n",
+        "    parsed_dates = [x for x in parsed_dates if x is not None]\n",
+        "    pd = set(x[0].strftime(\"%m/%d/%Y\") for x in parsed_dates)\n",
+        "\n",
+        "    print(pd)\n",
+        "\n",
+        "    if parsed_dates:\n",
+        "      closest = min(parsed_dates, key=lambda d: abs((parsed_recording_date - d[0]).days))\n",
+        "      print(closest[1])\n",
+        "      print(combined_df[combined_df['IMAGENAME'] == filename[:-4]][\"DocumentDate.1\"].values)\n",
+        "\n",
+        "      print(\"\\n\")\n",
+        "      return closest[0]\n",
+        "\n",
+        "    else:\n",
+        "      closest = None\n",
+        "\n",
+        "    print(closest)\n",
+        "    print(\"\\n\")\n",
+        "    return None"
+      ],
+      "metadata": {
+        "id": "TxiqTLFvBesY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "def extract_document_info(document_text):\n",
         "\n",
